--- a/src/main/resources/com/andrescarvajald/unitrack/students-view.fxml
+++ b/src/main/resources/com/andrescarvajald/unitrack/students-view.fxml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.andrescarvajald.unitrack.controllers.StudentsView"
-            prefHeight="400.0" prefWidth="600.0">
-        <Label text="HOAJDKFSALJFK">
-        </Label>
-</AnchorPane>
+<VBox alignment="CENTER_RIGHT" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andrescarvajald.unitrack.controllers.StudentsView">
+        <children>
+      <Button fx:id="editBtn" mnemonicParsing="false" onAction="#handleClicks" styleClass="bg-tertiary-color" text="Editar">
+         <VBox.margin>
+            <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+         </VBox.margin>
+      </Button>
+                <TableView id="tableView" fx:id="tableView" prefHeight="336.0" prefWidth="683.0" tableMenuButtonVisible="true" VBox.vgrow="SOMETIMES">
+                        <columns>
+                                <TableColumn fx:id="idColumn" text="ID" />
+                                <TableColumn fx:id="nameColumn" text="Nombre" />
+                                <TableColumn fx:id="lastnameColumn" text="Apellido" />
+                                <TableColumn fx:id="cedulaColumn" text="Cédula" />
+                                <TableColumn fx:id="jornadaColumn" text="Jornada" />
+                                <TableColumn fx:id="estadoColumn" text="Estado" />
+                        </columns>
+                        <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
+                        <VBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" />
+                        </VBox.margin>
+                </TableView>
+        </children>
+</VBox>
